--- a/style.css
+++ b/style.css
@@ -17,6 +17,17 @@ body {
   width: 100vw;
   height: 100vh;
 }
+canvas {
+  z-index: 9999;
+  pointer-events: none;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+}
 header {
   display: flex;
   padding: 2vw;
