--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 :root {
   --fg-color: rgb(0, 109, 211);
   --bg-color: rgb(75, 75, 75);
+  --text-color: white;
   --p1-color: blue;
   --p2-color: red;
 }
@@ -39,12 +40,13 @@ header {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  cursor: pointer;
 }
 .title-text {
   font-family: 'Dancing Script', cursive;
   font-size: 5vh;
   width: max-content;
-  color: white;
+  color: var(--text-color);
 }
 .turn {
   display: flex;
@@ -197,8 +199,8 @@ main {
   flex-direction: column;
   justify-content: space-evenly;
   position: fixed;
-  background-color: var(--fg-color);
-  border-radius: 50px;
+  background-color: var(--bg-color);
+  border-radius: 10px;
   padding: 0% 10%;
   left: 20%;
   top: 30%;
@@ -210,7 +212,7 @@ main {
   text-align: center;
   font-family: 'Roboto', sans-serif;
   font-size: 5vh;
-  color: rgb(214, 214, 214);
+  color: var(--text-color);
 }
 .ok {
   width: 100%;
@@ -219,7 +221,10 @@ main {
   font-size: 3vh;
   height: 50px;
   border: none;
-  background-color: var(--bg-color);
-  color: rgb(214, 214, 214);
+  background-color: var(--fg-color);
+  color: var(--text-color);
   border-radius: 25px;
+}
+.ok:hover {
+  border: 2px solid var(--text-color);
 }
